Refactor: Corrección de bugs, get rutas programadas y fitness revive. Sigue dando errores...
También se corrigió que el evento de simul de planificación agarraba de BD y no de memoria (imposibilitaba cards en todo momento).